--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIG Web UAM - Complet</title>
+    <title>Projet SIG Web - 2026</title>
 
     <!-- PWA Configuration -->
-    <meta name="description" content="Système d'Information Géographique de l'Université Adventiste de Mudende">
+    <meta name="description" content="Système d'Information Géographique de l'Université Amadou Moctar Mbow">
     <meta name="theme-color" content="#3498db">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -460,7 +460,8 @@
                 <div class="d-flex align-items-center gap-2 border-start ps-3 ms-2 tool-group">
                     <span class="text-secondary small fw-bold d-none d-xxl-block">OUTILS:</span>
 
-                    <button class="btn btn-sm btn-outline-success" onclick="activateGPS()" title="Ma Position GPS" id="gps-button">
+                    <button class="btn btn-sm btn-outline-success" onclick="activateGPS()" title="Ma Position GPS"
+                        id="gps-button">
                         <i class="fa fa-location-crosshairs"></i>
                     </button>
                     <button class="btn btn-sm btn-outline-light" onclick="triggerMeasure('distance')"
@@ -507,12 +508,14 @@
 
         <div id="map-wrapper" class="flex-grow-1 position-relative">
             <!-- Bouton pour réouvrir le panneau des couches -->
-            <button id="btn-show-toc" class="floating-btn floating-btn-left" onclick="toggleTOCPanel()" title="Afficher les couches">
+            <button id="btn-show-toc" class="floating-btn floating-btn-left" onclick="toggleTOCPanel()"
+                title="Afficher les couches">
                 <i class="fa fa-layer-group"></i>
             </button>
 
             <!-- Bouton pour afficher/masquer la légende -->
-            <button id="btn-toggle-legend" class="floating-btn floating-btn-bottom-right" onclick="toggleLegend()" title="Afficher/Masquer la légende">
+            <button id="btn-toggle-legend" class="floating-btn floating-btn-bottom-right" onclick="toggleLegend()"
+                title="Afficher/Masquer la légende">
                 <i class="fa fa-list"></i>
             </button>
 
